name:                hilarity-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hilarity-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hilarity-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hilarity-server
                     , async
                     , containers
                     , random
                     , stm
                     , text
                     , transformers
                     , websockets
  default-language:    Haskell2010
  other-modules:       Operations.Mods
                     , Types.Card
                     , Types.Deck
                     , Types.Failure
                     , Types.Game
                     , Types.State

test-suite hilarity-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hilarity-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hilarity-server
